package com.example.rentapp.dto;

public class RegisterRequest {
    private String fullName;
    private String email;
    private String password;
    private String phone;
    private String role; // "LANDLORD" sau "TENANT"

    // Getters și Setters
    public String getFullName() { return fullName; }
    public void setFullName(String fullName) { this.fullName = fullName; }
    public String getEmail() { return email; }
    public void setEmail(String email) { this.email = email; }
    public String getPassword() { return password; }
    public void setPassword(String password) { this.password = password; }
    public String getPhone() { return phone; }
    public void setPhone(String phone) { this.phone = phone; }
    public String getRole() { return role; }
    public void setRole(String role) { this.role = role; }
}